# Lux

./: .gitignore  CLOUD_TRAINING_GUIDE.md  PAPERSPACE_QUICK_START.md  README.md  pyproject.toml  requirements.txt
lux_video_gen/: __init__.py
lux_video_gen/configs/: __init__.py  inference_config.py  model_config.py  training_config.py
lux_video_gen/core/: __init__.py  attention.py  dit_block.py  embeddings.py  normalization.py
lux_video_gen/data/: __init__.py  dataset.py  transforms.py
lux_video_gen/inference/: __init__.py  audio_sync.py  pipeline.py  sampler.py  video_processor.py
lux_video_gen/models/: __init__.py  audio_model.py  dit_video.py  multimodal_encoder.py  text_encoder.py  vae3d.py
lux_video_gen/training/: __init__.py  ema.py  losses.py  optimizer.py  scheduler.py  trainer.py
lux_video_gen/ui/: __init__.py  gradio_app.py
lux_video_gen/utils/: __init__.py  checkpoint.py  distributed.py  logging_utils.py  memory.py  video_utils.py
scripts/: benchmark.py  cloud_manager.py  cloud_train_setup.sh  download_dataset.py  download_models.py  fast_download.sh  find_big_gpus.py  generate.py  generate_test_video.py  gpu_smoke_test.py  launch_ui.py  list_gpus.py  lux_cli.py  paperspace_launch.py  prepare_data.py  remote_check.sh  remote_download.sh  remote_setup.sh  remote_train.sh  remote_train_nowb.sh  remote_train_v3.sh  remote_train_v4.sh  search_gpus.py  setup_remote.sh  start_training.sh  survey_gpus.py  test_generate.py  test_integration.py  train.py  vastai_launch.py
